Prod/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodapp
  annotations:
spec:
  selector:
    matchLabels:
      app: prodapp
  template:
    metadata:
      labels:
        app: prodapp
    spec:
      containers:
      - name: prodapp
        image: quay.io/rnare/liberty-rest:latest
        resources: {}
        ports:
        - containerPort: 9080
