Prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prodapp-svc
  annotations:
    argocd.argoproj.io/hook: Sync
spec:
  selector:
    app: prodapp
  ports:
  - port: 9080
    targetPort: 9080
