Prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prodapp-route
  annotations:
    argocd.argoproj.io/hook: PostSync
    argocd.argoproj.io/sync-wave: "2"
spec:
  port:
    targetPort: 9080
  to:
    kind: Service
    name: prodapp-svc
    weight: 100
